--- a/6/marionette/sophie/templates/story.html
+++ b/6/marionette/sophie/templates/story.html
@@ -14,7 +14,7 @@
 </script>
 
 <script type="text/template" id="add-line-template">
-    
+    Story
     <ol></ol>
   <h3> add a line to the story! </h3>
   <input type="text" id="newline">
@@ -40,12 +40,13 @@
    <h1> BLOG </h1>
 <div class="pure-g">
  
-  <div class="pure-u-1-12"></div>
-  <div class="pure-u-5-12" id="new-blog-display"> </div>
+  <div class="pure-u-1-12" ></div>
 
-  <!--  <div id="add-line-display"></div> -->
-All Posts:
-<div class="pure-u-6-12" id="all-posts-display">
+    <div class="pure-u-1-3" id="add-line-display"></div>
+    <div class="pure-u-1-3" id="new-blog-display"> </div>
+    <!-- whyyy are you showing up twice -->
+
+    <div class="pure-u-1-4" id="all-posts-display"> </div>
 
 
 </div>
