--- a/6/marionette/sydney_deanna/templates/index.html
+++ b/6/marionette/sydney_deanna/templates/index.html
@@ -6,7 +6,7 @@
 
 <script type="text/template" id="newPost">
 
-    Update your blog! <br> <textarea type="textarea" id="nPost" style="width: 300px; height: 200px"></textarea> <br>
+    Update your blog! <br> <input id="nPost">
     <button class="pure-button pure-button-primary" id="add">Submit</button>
 
   <ul class="js-list"></ul>
