--- a/7/marionette/coby_goldberg/templates/index.html
+++ b/7/marionette/coby_goldberg/templates/index.html
@@ -4,7 +4,7 @@
 
 
 <script type="text/template" id="static-template">
-  <td id="name" align="center"><%= name %></td>
+  <td id="name" align="center"><a href=<%= name %>><%= name %></a></td>
   <td id="period" align="center"><%= period %></td>
   <td id="comments" contenteditable="true"><%= comments %></td>
 </script>
