got it working a little bettergit add --all

--- a/6/marionette/sydney_deanna/templates/index.html
+++ b/6/marionette/sydney_deanna/templates/index.html
@@ -9,7 +9,7 @@
     Update your blog! <br> <input id="nPost">
     <button class="pure-button pure-button-primary" id="add">Submit</button>
 
-  <ul class="js-list"></ul>
+  <ul class="js-list"> <%= blog%> </ul>
 </script>
 
 
