--- a/6/marionette/terrance_liang/templates/index.html
+++ b/6/marionette/terrance_liang/templates/index.html
@@ -2,22 +2,33 @@
 {% block body %}
 
 <script type="text/template" id="place-template">
-  <td><%- name%></td><td><%- story %></td><td><%- rating %></td>
+  <td><%- name%></td><td><%- story %></td><td><%- rating %></td><td><button id="update">Add!</button></td>
   <td><button id="up">up</button></td>
   <td><button id="down">down</button></td>
   <td><button id="delete">delete</button></td>
 </script>
+
+<script type="text/template" id="text-template">
+  <h3><%- name%></h3>&nbsp&nbsp&nbsp Rating - <%- rating %><br>
+  <b><%- story %></b><br><br>
+  <input id="<%- storyid%>">&nbsp <button class="pure-button pure-button-primary" id="update">Update!</button><br>
+</script>      
+
+<script type="text/template" id="textcomp-template">
+  <body>
+  </body>
+</script>      
 
 <script type="text/template" id="composite-template">
   <h3>
        <hr>
        New Story name: <input id="newname"><br>
        First Few Words: <input type="text" id="story" maxlengh="30"><br>
-       <button class="pure-button pure-button-primary" id="add">Add!</button>
+       <button class="pure-button pure-button-primary" id="add">Add Words!</button>
        <p>
 	 <table class="pure-table pure-table-bordered pure-table-striped">
 	   <thead>
-	     <tr><th>Story Name</th><th>Story</th><th>Rating</th><th colspan="3">Controls</th></tr>
+	     <tr><th>Story Name</th><th>Story</th><th>Rating</th><th>Add</th><th colspan="3">Controls</th></tr>
 	     </thead>
 	   <tbody>
 	     </tbody>
@@ -28,12 +39,10 @@
   <div class="pure-u-1-12"></div>
   <div class="pure-u-5-6">
     <h1>Marionette stuff</h1>
-    <a href="#one"><button class="pure-button pure-button-primary">one</button></a>
-    <a href="#two"><button class="pure-button pure-button-primary">two</button></a>
     <div id="first-region">
     </div>
     <hr>
-    <table class="pure-table pure-table-bordered" id="second-region"></table>
+    <div id="second-region"></div>
     All stories go here
     <hr>
   </div>
