--- a/7/marionette/max_zhou/templates/meteor-story.html
+++ b/7/marionette/max_zhou/templates/meteor-story.html
@@ -1,14 +1,3 @@
-<!--
-<body>
-  <h1>Welcome to Meteor!</h1>
-  <h2>List of stories!</h2>
-  {{> titles}}
-  <h2>Each story!</h2>
-  {{> lines}}
-  {{> hello}}
-</body>
--->
-
 <template name="homepage">
   {{>titles}}
   {{>lines}}
@@ -16,14 +5,52 @@
   {{>submitButton}}
 </template>
 
+<template name="storylines"> <!--helper template that just grabs lines from story -->
+  <!--data context is "this" since it gets it from the parent template -->
+  <!--slightly confusing to have 2 this's referring to different things -->
+  {{#each this}}
+  <p class="text {{#if isChecked}}checked{{/if}}">{{this.[0]}}</p>
+  {{/each}}
+</template>
+
 <template name="story">
   <h1>STORYTIME!</h1> <!--Data context comes from route, is a single post -->
-  {{#each text}}
-  {{this}}<br>
-  {{/each}}
+  {{>storylines this}}
   {{>submitButton this}}
   <!--Sending in just title for data context leads to weird things and string objects.  Just send in a whole object and parse in js. -->
 </template>
+
+<template name="lines">
+  <!--{{lines.[0].text}}-->
+  <!--From handlebars for eaching a basic array -->
+  <!--.[0] is syntax for grabbing out of an array-->
+  
+  {{#each lines}}
+  <h4><a href ="/{{title}}">{{title}}</a></h4>
+  {{>storylines this.text}}  <!-- 1 hr 20 mins debugging this pos since I needed a .text -->
+  {{/each}}
+  
+</template>
+
+<template name="storyText">
+  {{#each text}}
+  {{/each}}
+</template>
+
+<template name="footer">
+  Some footer<br>
+  <a href="/">Main page</a>
+</template>
+
+<template name="titles">
+ {{#each titles}}
+  <a href ="/{{this.title}}">{{this.title}}</a><br>
+  {{/each}}
+</template>
+<!--  {{#each titles}}
+  <a href ="/{{this.title}}">{{this.title}}</a><br>
+  {{/each}}
+-->
 
 <template name="notfound">
   <h1>Not found.</h1>
@@ -38,30 +65,4 @@
   <button class="pure-button pure-button-primary" id="submit">Submit!</button>
   <br>
   <p>You've pressed the button {{counter}} times.</p>
-</template>
-
-<template name="titles">
-  {{#each titles}}
-  <a href ="/{{this.title}}">{{this.title}}</a><br>
-  {{/each}}
-</template>
-
-<template name="lines">
-  <!--From handlebars for eaching a basic array -->
-  {{#each lines}}
-  <h4><a href ="/{{title}}">{{title}}</a></h4>
-  {{#each text}}
-  {{this}}<br>
-  {{/each}}
-  {{/each}}
-</template>
-
-<template name="storyText">
-  {{#each text}}
-  {{/each}}
-</template>
-
-<template name="footer">
-  Some footer<br>
-  <a href="/">Main page</a>
 </template>
