--- a/7/marionette/edison_shi/templates/index.html
+++ b/7/marionette/edison_shi/templates/index.html
@@ -3,55 +3,28 @@
 {% extends "base.html" %}
 {% block body %}
 
-<script type="text/template" id="flavor-template">
-  <h2>Flavors!</h2>
-  <h3><%= flavor %></h3>
-
-  Add A Flavor : <input id="newflavor">
-  <button class ="pure-button pure-button-primary" id="add">Add</button>
-  <table class = "pure-table pure-table-bordered">
-    <thread>
-      <tr>
-	<td>Flavors!</td>
-      </tr>
-    </thread>
-    <tbody>
-    </tbody>
-  </table>
-  <h4>Place footer</h4>
-</script>
-
-<script type="text/template" id="change-template">
-  <td><%- flavor%></td>
-  <td><button id="up">up</button></td>
-  <td><button id="down">down</button></td>
-  <td><button id="delete">delete</button></td>
-</script>
-
 <script type="text/template" id="result-template">
-  <h3>Results</h3>
+  <%- flavor %>
 </script>
 
-<div class = "pure-g">
-  <div class="pure-u-1-12"></div>
-  <div class="pure-u-5-6">
-    <h1>Best Ice Cream Flavors!</h1>
+<script type="text/template" id="flavor-template">
+  <h1><center>Ice Cream Flavors!</center></h1>
 
-    <div id="first-region">
-      Flavors!!
-    </div>
-    <hr>
-    <table class="pure-table pure-table-bordered" id="second-region">
-    </table>
-    <hr>
-    <table class="pure-table pure-table-bordered" id="third-region">
-    </table>
-    <hr>
-    <div id="fourth-region">
-      Yes!!
-    </div>
-  </div>
+  <center><table class="pure-table pure-table-bordered">
+   <tr></tr>
+  </table></center>
+
+  <center><h3>Add a flavor!</h3></center>
+
+  <center> <input id="flavor">
+
+    <button class="pure-button pure-button-primary" id="add">Insert Flavor!</button></center>
+</script>
+
+
+<div id="view">
 </div>
+
 <script src="static/app.js"></script>
 
 {% endblock %}
