--- a/6/marionette/aida/templates/base.html
+++ b/6/marionette/aida/templates/base.html
@@ -14,7 +14,12 @@
 	{% endblock %}
 	</head>
 	<body>
+		<h1>To Do List</h1>
+		<div id="main">
+
+		</div>
 		{% block body %}
 		{% endblock %}
+		
 	</body>
 </html>
