--- a/7/marionette/coby_goldberg/templates/index.html
+++ b/7/marionette/coby_goldberg/templates/index.html
@@ -22,9 +22,9 @@
     </table>
     <h3>Add teacher</h3>
     <hr>
-    <input type="text" id="name" placeholder="Name"></input>
-    <input type="text" id="period" placeholder="Period"></input>
-    <input type="text" id="comments" placeholder="Comments"></input>
+    <input type="text" id="name_val" placeholder="Name"></input>
+    <input type="text" id="period_val" placeholder="Period"></input>
+    <input type="text" id="comments_val" placeholder="Comments"></input>
     <button id="add" class="pure-button pure-button-primary">Add</button>
 
 </script>
