--- a/6/marionette/isaac/templates/index.html
+++ b/6/marionette/isaac/templates/index.html
@@ -7,8 +7,8 @@
 <script type="text/template" id="composite-template">
 	<form class="pure-form">
 		<fieldset>
-			<input type="text" placeholder="New Task">
-			<button class="pure-button pure-button-primary">Add Task</button>
+			<input type="text" id="to_add" placeholder="New Task">
+			<button class="pure-button pure-button-primary" id="add">Add</button>
 		</fieldset>
 	</form>
 		<table class="pure-table pure-table-bordered pure-table-striped">
@@ -25,7 +25,7 @@
 	<td><%- task%></td>
 	<td>
 	<label for="completed" class="pure-checkbox">
-		Done <input type="checkbox">
+		Done <input type="checkbox" id="done">
 	</label>
 	</td>
 </script>
