--- a/5/marionette/elise_zlotnikova/templates/base.html
+++ b/5/marionette/elise_zlotnikova/templates/base.html
@@ -5,8 +5,7 @@
     <script src="../static/lib/lodash.js"></script>
     <script src="../static/lib/backbone.js"></script>
     <script src="../static/lib/backbone.marionette.js"></script>
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-    
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.2.0/flatly/bootstrap.min.css">
   </head>
   <body>
     {% block body %}
