--- a/7/marionette/fawn_wong/templates/index.html
+++ b/7/marionette/fawn_wong/templates/index.html
@@ -1,29 +1,57 @@
 {% extends "base.html" %}
 {% block body %}
 
+<script type = "text/template" id = "threads-template">
+  <div></div>
+  <br>
+  <span class = "pure-form" action="/" method = "POST">
+    <fieldset class = "pure-group">
+      <input name = "title" class = "pure-u-1" id = "newthread" placeholder = "Post Title"> 
+      <textarea name = "content" class = "pure-u-1" id = "postcontent" placeholder = "Post Content" style = "resize:none;height:100px"></textarea>
+    </fieldset>
+    <button class = "pure-button pure-u-1 pure-button-primary" id = "add">Add Post</button>
+  </span>
+</script>
+
 <script type = "text/template" id = "thread-template">
-  <div>
-    <span style = "font-weight:bold;"><%= title %></span>
-    <span style = "float:right;"><%= comments %> comments</span>
-  </div>
+    <br>
+    <button class = "pure-button" id="remove" style = "margin-right:10px;height:35px">X</button>
+    <span style = "font-weight:bold;font-size:24px"><%= title %></span>
+    <button class = "pure-button pure-button-primary" id="view" style = "float:right;margin-left:10px;">&gt;&gt;</button>
+    <br><BR>
 </script>
 
 <script type = "text/template" id = "post-template">
-  <div>
     <h2><%= title %></h2>
-    <%= content %>
-  </div>
+    <span id = "content"><%= content %></span>
+    <!--
+    <% for (var i = 0 ; i < comments.length ; i ++) { %>
+      <div><%= comments[i] %></div>
+    <% } %>
+    <br>
+    <span class = "pure-form" action="/" method = "POST">
+      <fieldset class = "pure-group">
+        <textarea class = "pure-u-1"  id = "commentcontent" placeholder = "Comment"></textarea>
+      </fieldset>
+      <button class = "pure-button pure-u-1 pure-button-primary" id = "addcomment">Add Comment</button>
+    </span>-->
 </script>
-
+<!--
 <script type = "text/template" id = "comment-template">
-  <div>
-    <%= comment %>
-  </div>
+  <%= comment %>
 </script>
-
+-->
 <div class = "pure-g">
   <div class = "pure-u-1-12"></div>
-  <div class = "pure-u-1-3" id = "threads"></div>
+  <div class = "pure-u-7-8">
+    <h1>A blog, I guess?</h1>
+    <h5 style = "text-align:right">things started to break when i attempted to add persistance, will fix when less tired.</h5>
+  </div>
+</div>
+<div class = "pure-g">
+  <div class = "pure-u-1-12"></div>
+  <div class = "pure-u-1-3" id = "threads">boop</div>
+  <div class = "pure-u-1-12"></div>
   <div class = "pure-u-1-3" id = "post"></div>
 </div>
 <script src = "static/app.js"></script>
