--- a/6/marionette/Maria/templates/index.html
+++ b/6/marionette/Maria/templates/index.html
@@ -1,13 +1,7 @@
-<!doctype html>
-<html>
-	<head>
-		<script src="static/lib/jquery.js"></script>
-		<script src="static/lib/lodash.js"></script>
-		<script src="static/lib/backbone.js"></script>
-		<script src="static/lib/backbone.marionette.js"></script>		
-	</head>
-	<body>
-		Body
-		<script type="text/javascipt" src="static/app.js"></script>
-	</body>
-</html>
+{% extends "base.html" %}
+{% block body %}
+
+
+<script type="text/javascipt" src="static/app.js"></script>
+
+{% endblock body %}
