--- a/5/marionette/david_bang/templates/index.html
+++ b/5/marionette/david_bang/templates/index.html
@@ -2,69 +2,31 @@
 {% block body %}
 
 
-<script type="text/template" id="composite-template">
-	<h2>This is the header stuff</h2>
-	We might have some stuff on top including maybe user interface stuff:
-	<p>
-		<h3><%= last %>, <%= first %></h3>
-		<h4><%= stars %></h4>
-		<h2>
-			<% for (var i = 0; i < stars; i ++)  { %>
-		<%= "*" %>
-			<% } %>
-		</h2>
-		<p>
-	New Place name: <input id="newname"><button class="pure-button" id="add">Add</button>
-	<table class="pure-table pure-table-bordered">
-		<thead>
-			<tr><th>Name</th><th>Rating</th><th colspan="3">Conrtols</th></tr>
-		</thead>
-		<tbody>
-			<!-- The Place itemviews will go here -->
-		</tbody>
-	</table>
-	<h3>And we might have some footer stuff as well</h3>
+<script type="text/template" id="story-template">
+  <center><%- line %> <br> </center>
 </script>
 
-<script type="text/template" id="place-template">
-	<td><%- name %></td><td><%- rating%></td>
-	<td><button id="up">up</button></td>
-	<td><button id="down">down</button></td>
-	<td><button id="delete">delete</button></td>
+<script type="text/template" id="stories-template">
+ <center> <div>
+  Add New Lines to the Story: <br>  <input type="text" name="lines" id="line"><br><button class="pure-button" id="add">Add</button> </div> </center>
+<br>
+<center>Here is an awesome story <br> </center>
+<ul></ul>
+
+
 </script>
 
-<script type="text/template" id="first-template">
-	<h2>This is the first template</h2>
-	<p>It's just comprised of static stuff</p>
-	<blockquote>
-		This is a quote
-	</blockquote>
-</script>
 
 <div class="pure-g">
-	<div class="pure-u-1-12"></div>
+  <div class="pure-u-1-12"></div>
 	<div class="pure-u-5-6">
-		<h1>The Marionette Page</h1>
+<center>
+	  <h1>The Story Page</h1>
+	</center>
+	</div>
+  </div>
 
-		<a href="#one"><button class="pure-button pure-button-primary">Go to one page</button></a>
-		<a href ="#two"><button class="pure-button pure-button-primary">Go to two page</button></a>
-		<hr>
-		<div id="first-region">
-			This is the first region
-		</div>
-		<hr>
-		<table class="pure-table pure-table-bordered" id="second-region">
-		</table>
-		<hr>
-		<table class="pure-table pure-table-bordered" id="third-region">
-		</table>
-		<hr>
-		<div id="fourth-region">
-			this is the fourth region
-		</div>
-	</div>
-	</div>
-</div>
+<div id="story"></div>
 
 <script src="static/app.js"></script>
 {% endblock body %}
