--- a/6/marionette/terrance_liang/templates/index.html
+++ b/6/marionette/terrance_liang/templates/index.html
@@ -2,21 +2,16 @@
 {% block body %}
 
 <script type="text/template" id="place-template">
-  <td><%- name%></td><td><%- story %></td><td><%- rating %></td><td><button id="update">Add!</button></td>
-  <td><button id="up">up</button></td>
-  <td><button id="down">down</button></td>
-  <td><button id="delete">delete</button></td>
+  <td><%- name%></td><td><%- storyintro %></td><td><center><%- rating %></center></td><td><center><button id="update">View/Edit</center></button></td>
+  <td><button id="up">Up</button></td>
+  <td><button id="down">Down</button></td>
+  <td><button id="delete">Delete</button></td>
 </script>
 
 <script type="text/template" id="text-template">
-  <h3><%- name%></h3>&nbsp&nbsp&nbsp Rating - <%- rating %><br>
+  <h3><%- name%></h3>Rating - <%- rating %><br><br>
   <b><%- story %></b><br><br>
   <input id="<%- storyid%>">&nbsp <button class="pure-button pure-button-primary" id="update">Update!</button><br>
-</script>      
-
-<script type="text/template" id="textcomp-template">
-  <body>
-  </body>
 </script>      
 
 <script type="text/template" id="composite-template">
@@ -24,11 +19,11 @@
        <hr>
        New Story name: <input id="newname"><br>
        First Few Words: <input type="text" id="story" maxlengh="30"><br>
-       <button class="pure-button pure-button-primary" id="add">Add Words!</button>
+       <button class="pure-button pure-button-primary" id="add">Create Story!</button>
        <p>
 	 <table class="pure-table pure-table-bordered pure-table-striped">
 	   <thead>
-	     <tr><th>Story Name</th><th>Story</th><th>Rating</th><th>Add</th><th colspan="3">Controls</th></tr>
+	     <tr><th><center>Story Name</center></th><th><center>Story Intro</center></th><th>Rating</th><th><center>View/Edit</center></th><th colspan="3"><center>Controls</center></th></tr>
 	     </thead>
 	   <tbody>
 	     </tbody>
@@ -38,12 +33,11 @@
 <div class="pure-g">
   <div class="pure-u-1-12"></div>
   <div class="pure-u-5-6">
-    <h1>Marionette stuff</h1>
+    <h1>Storytime</h1>
     <div id="first-region">
     </div>
     <hr>
     <div id="second-region"></div>
-    All stories go here
     <hr>
   </div>
 </div>
