--- a/7/marionette/angela_lin/templates/index.html
+++ b/7/marionette/angela_lin/templates/index.html
@@ -1,35 +1,41 @@
-<!DOCTYPE HTML>
 <html>
   <head>
     <script src="static/lib/jquery.js"></script>
     <script src="static/lib/lodash.js"></script>
     <script src="static/lib/backbone.js"></script>
     <script src="static/lib/backbone.marionette.js"></script>
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">    
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
   </head>
   
-  <div class="pure-menu pure-menu-horizontal pure-menu-scrollable">
-    <a href="#" class="pure-menu-link pure-menu-heading">TODO</a>
-    <!-- will include if I have time
-	 <ul class="pure-menu-list">
-	   <li class="pure-menu-item"><a href="#" class="pure-menu-link">Category1</a></li>
-	 </ul>
-	 -->
-  </div>
-  
-  <script type="text/template" id="composite-template">
-    <h2>Currently, you have...</h2>
-      New To-Do: <input id="newitem"><button class="pure-button" id="add">Add Item</button>
-      <table class="pure-table pure-table-bordered">
-	<thead>
-	  <tr><th>Name</th><th>Rating</th><th colspan="3">Conrtols</th></tr>
-	</thead>
-	<tbody>
-	  <!-- The Place itemviews will go here -->
-	</tbody>
-      </table>
-      <h3>And we might have some footer stuff as well</h3>
-      
-      <script src="static/app.js"></script>
+  <style>
+    .borderless {
+    border: none;
+    }
+    </style>
+  <center>
+  <body>
+    <script type="text/template" id="lines">
+      <%-liner %>
+    </script>
+    
+      <div id="dump">
+	stuff is dumped here and this is not displayed
+      </div>
 
+    <script type="text/template" id="adder">
+      <h1>Once Upon a Time...</h1>
+      <h3> Here is the current story: </h3>
+      <table class="pure-table borderless">
+	<td></td>
+      </table>
+      <br>
+      <hr><hr>
+      <br>
+      <b>Now, add three words:</b>
+      <input type="text" size="30" id="inputted" placeholder="Three Words Here">
+&nbsp;&nbsp;&nbsp;&nbsp;<button class="pure-button pure-button-primary" id="addbutton">Add To Story</button>
+    </script>
+    <script src="static/story.js"></script>
+  </body>
+  </center>
 </html>
