--- a/6/marionette/rebecca/templates/index.html
+++ b/6/marionette/rebecca/templates/index.html
@@ -1,18 +1,59 @@
-<!doctype html>
-<html>
-  <head>
-    <script src="static/lib/jquery.js"></script>
-    <script src="static/lib/lodash.js"></script>
-    <script src="static/lib/backbone.js"></script>
-    <script src="static/lib/backbone.marionette.js"></script>
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-    
-  </head>
-  
-  <body>
+{% extends "base.html" %}
+{% block body %}
 
-    <h1> Hello World </h1>
+<script type="text/template" id="composite-template">
+	<h3> All the places</h3>
+	<h3><%= last %>,<%= first %> Stars: <%= stars %></h3>
+	<h3>
+		<% for (var i = 0 ; i < stars ; i++) { %>
+		   &#9733;
+		<% } %>
+	<hr>
+	New place name: <input id="newname">
+	<button class="pure-button pure-button-primary" id="add">Add!</button>
+	<p>
+		<table class="pure-table pure-table-bordered pure-table-striped">
+			<thead>
+				<tr><th>Name</th><th>Rating</th><th colspan="3">Controls</th></tr>
+			</thead>
+			<tbody>
+			</tbody>
+		</table>
+</script>
 
-  </body>
+<script type="text/template" id="place-template">
+	<td><%- name%></td><td><%- rating %></td>
+	<td><button id="up">up</button></td>
+	<td><button id="down">down</button></td>
+	<td><button id="delete">delete</button></td>
+</script>
 
-</html>
+<script type="text/template" id="static-template">
+	<h3>Some static information</h3>
+	<p>Maybe with a paragraph</p>
+	<blockquote>And maybe a blockquote</blockquote>
+</script>
+
+<div class="pure-g">
+	<div class="pure-u-1-12"></div>
+	<div class="pure-u-5-6">
+		<h1>Marionette stuff</h1>
+
+		<a href="#one"><button class="pure-button pure-button-primary">one</button></a>
+		<a href="#two"><button class="pure-button pure-button-primary">two</button></a>
+		<div id="first-region">
+			The first region
+		</div>
+		<hr>
+		<table class="pure-table pure-table-bordered" id="second-region"></table>
+		<hr>
+		<table class="pure-table pure-table-bordered" id="third-region"></table>
+		<hr>
+		<div id="fourth-region">
+			The fourth region
+		</div>
+	</div>
+</div>
+
+<script src="static/app.js"></script>
+{% endblock body %}
