--- a/5/marionette/aaron_mortenson/templates/index.html
+++ b/5/marionette/aaron_mortenson/templates/index.html
@@ -8,9 +8,7 @@
 	<td><button id="delete">delete</button></td>
 </script>
 
-
-
-<script type="text/template" id="list-template">
+<script type="text/template" id="submit-template">
 	<div class="pure-u-1-6"></div>
 	<div class="pure-u-2-3">
 	  <h2>Add Item</h2>
@@ -18,6 +16,11 @@
 	    <input type="text" id="itemname" placeholder="Item Name">
 	    <button class="pure-button" id="add">Submit</button>
 	    <br>
+	</div>
+	<div class="pure-u-1-6"></div>
+</script>
+
+<script type="text/template" id="list-template">
 	    <h2>To Do:</h2>
 	    <table class="pure-table pure-table-bordered">
 	      <thead>
@@ -27,8 +30,6 @@
 		<!-- The Place itemviews will go here -->
 	      </tbody>
 	  </form>
-	</div>
-	<div class="pure-u-1-6"></div>
 </script>
 
 <div id = "top"><h1>TwitchPlaysToDoLists</h1></div>
