--- a/6/marionette/nadia_saleh/templates/index.html
+++ b/6/marionette/nadia_saleh/templates/index.html
@@ -1,49 +1,26 @@
-
-{% extends "base.html" %}
+{% extends "base.html"%}
 {% block body %}
 
-<script type="text/template" id="pro-template">
-    <td>- <%- pro %></td>
+<script type="text/template" id="addLine">
+<hr>
+	Add three more words: <input id="newLine">
+
+	<button class="pure-button pure-button-primary" id="add">Add!!</button>
+   <hr>
 </script>
 
-<script type="text/template" id="con-template">
-    <td>- <%- con %></td>
-</script>
-
-<script type="text/template" id="static-template">
-    <br><br>Pro-Con List<br><br><br>
-</script>
-
-<center>
-<div id="first-region">
-    Static
-</div>
-</center>
+<script type="text/template" id= "story">
+<td><%- content %></td><td> <button class="rm">remove line</button></td>
+    </script>
 
 <div class="pure-g">
-        
-       <div class="pure-u-1-8"></div>
-       
-       <div class="pure-u-3-8">
-           <center>PROS</center><br><br>
-            <div id="second-region">
-                Some sort of header region
-            </div>
-            
-        </div>
-       <div class="pure-u-3-8">
-           <center>CONS</center><br><br>
-            <div id="third-region">
-                Some sort of header region
-            </div>
-            </center>
-        
-        
-        
-
-        
-    </div>
+	<div class="pure-u-1-12"></div>
+	<div class="pure-u-5-6">
+        <div id="first-region">
+		</div>
+    
+	</div>
 </div>
-
 <script src="static/app.js"></script>
-{% endblock body %}
+
+{% endblock %}
