--- a/6/marionette/rebecca/templates/index.html
+++ b/6/marionette/rebecca/templates/index.html
@@ -14,7 +14,7 @@
   <ol></ol>
   <h3>Add a line!</h3>
   <input type = "text" id = "newline">
-  <button class = "pure-button pure-button-primary" id = "add">Add!</button>
+  <button class = "pure-button pure-button-primary" id = "add">Add your line!</button>
 </script>
 
 <div class="pure-g">
