--- a/6/marionette/brian/static/style.css
+++ b/6/marionette/brian/static/style.css
@@ -2,6 +2,10 @@
     font-family:"Arial Verdana",Arial,sans-serif;
 }
 
+h3{
+    text-align: center;
+}
+
 .box{
     background-color: #cce;
     border-radius: 2px;
@@ -14,10 +18,39 @@
 
 button{
     border: none;
-    background-color: #8e8;
-    height: 35px;
-    border-radius: 5px;
+    background-color: #6d6;
+    height: 25px;
+    width: 50px;
+    font-size: 1em;
+    color: #906;
+    font-weight: bold;
+    border-radius: 2px;
+    
 }
 button:hover{
     background-color: #6c6;
 }
+
+input[type="text"]{
+    height: 20px;
+    border-radius: 2px;
+    border: none;
+}
+
+table{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    width: 100%;
+}
+th{
+    background: #cce;
+}
+tr{
+    border-radius: 2px;
+    cursor: pointer;
+}
+tr:nth-child(even) {background: #cec }
+tr:nth-child(odd) {background: #bbf }
+
