--- a/6/marionette/barak/templates/index.html
+++ b/6/marionette/barak/templates/index.html
@@ -1,16 +1,23 @@
 <!doctype html>
 <html>
   <head>
+    <!-- <script src="/static/lib/jquery.min.js"></script> -->
+    <!-- <script src="/static/lib/lodash.js"></script> -->
+    <!-- <script src="/static/lib/backbone.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone.js" type="text/javascript"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore.js" type="text/javascript"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js" type="text/javascript"></script> -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
-    <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js" type="text/javascript"></script> -->
-    <script src="http://ajax.googleapis.com/ajax/libs/backbone.js/1.1.2/backbone-min.js" type="text/javascript"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/backbone.marionette/0.10.2/backbone.marionette.min.js" type="text/javascript"></script>
-  </head>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js" type="text/javascript"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js" type="text/javascript"></script>
 
+    <!-- I had to do some stupid stuff in the chessboard.js code - that is, add static/<folder> to the string that fetches the icons. Yeah, flask makes life difficult. -->
+    <script src="static/chessboardjs-0.3.0/js/chessboard-0.3.0.js"></script>
+    <link rel="stylesheet" href="//chessboardjs.com/css/chessboard.css"></link>
+  </head>
   <body>
-    <div id="board1" style="width: 400px; float: left; margin-right: 20px"></div>
-    <div style="clear:both"></div>
-    <script src="static/chessboardjs-0.3.0/js/chessboardjs-0.3.0.js" type="text/javascript"></script>
+    <h1>hello</h1>
+    <div id="board1" style="width: 400px"></div>
     <script src="static/app.js"></script>
   </body>
 </html>
