--- a/7/marionette/fawn_wong/templates/index.html
+++ b/7/marionette/fawn_wong/templates/index.html
@@ -48,7 +48,7 @@
   <div class = "pure-u-1-12"></div>
   <div class = "pure-u-7-8">
     <h1>A blog, I guess?</h1>
-    <h5 style = "text-align:right">json couldn't decode, for some reason</h5>
+    <h5 style = "text-align:right">json didn't agree, i really did try :c<br>will come back to this over the break</h5>
   </div>
 </div>
 <div class = "pure-g">
