--- a/6/marionette/jstrauss/templates/base.html
+++ b/6/marionette/jstrauss/templates/base.html
@@ -6,11 +6,13 @@
 		<script src="static/lib/backbone.js"></script>
 		<script src="static/lib/backbone.marionette.js"></script>
 		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-		
 	</head>
+	<title>Marionette Blog</title>
+	<center><h2>Marionette Blog</h2>
+	<h3>by Justin Strauss</h3><br><br></center>
+
 	<body>
 		{% block body %}
-		<h1>hellobase</h1>
 		{% endblock %}
 	</body>
 </html>
