--- a/6/marionette/jstrauss/templates/index.html
+++ b/6/marionette/jstrauss/templates/index.html
@@ -1,13 +1,40 @@
 {% extends "base.html" %}
 {% block body %}
 
-<script type="text/template" id="composite-template">
-	<h3> All the places</h3>
-	<h3><%= last %>,<%= first %> Stars: <%= stars %></h3>
-	<h3>
-		<% for (var i = 0 ; i < stars ; i++) { %>
-		   &#9733;
-		<% } %>
+<script type="text/template" id="existingpoststemp">
+<h3> Existing Posts </h3>
+<table class="pure-table pure-table-bordered pure-table-striped">
+			<thead>
+				<tr><th>Post</th><th>Author</th></tr>
+			</thead>
+			<tbody>
+				<%= post %> <%= author %>
+			</tbody>
+		</table>
+</script>
+
+
+<script type="text/template" id="makeposttemp">
+	<h3> Add an entry </h3>
+	<input id="submit">
+    <br><br>
+    <button class="pure-button pure-button-primary" id="add">Submit</button>
+  
+</script>
+
+<div class="pure-g">
+	<div class="pure-u-1-12"></div>
+  	<div class="pure-u-5-6">
+    	<div id="existingposts"></div>
+    	<div id="makepost"></div>
+  	</div>
+</div>
+
+<script src="static/app.js"></script>
+
+<!--
+
+<script type="text/template" id="newposttemp">
 	<hr>
 	New place name: <input id="newname">
 	<button class="pure-button pure-button-primary" id="add">Add!</button>
@@ -28,32 +55,21 @@
 	<td><button id="delete">delete</button></td>
 </script>
 
-<script type="text/template" id="static-template">
-	<h3>Some static information</h3>
-	<p>Maybe with a paragraph</p>
-	<blockquote>And maybe a blockquote</blockquote>
-</script>
-
 <div class="pure-g">
 	<div class="pure-u-1-12"></div>
 	<div class="pure-u-5-6">
-		<h1>Marionette stuff</h1>
+	<div id="existingposts">
+	</div>
+	<div id="newpost">
+	</div>
 
-		<a href="#one"><button class="pure-button pure-button-primary">one</button></a>
-		<a href="#two"><button class="pure-button pure-button-primary">two</button></a>
-		<div id="first-region">
-			The first region
-		</div>
 		<hr>
-		<table class="pure-table pure-table-bordered" id="second-region"></table>
+		<table class="pure-table pure-table-bordered" id="existingposts"></table>
 		<hr>
-		<table class="pure-table pure-table-bordered" id="third-region"></table>
+		<table class="pure-table pure-table-bordered" id="makepost"></table>
 		<hr>
-		<div id="fourth-region">
-			The fourth region
-		</div>
 	</div>
 </div>
 
-<script src="static/app.js"></script>
+<script src="static/app.js"></script>-->
 {% endblock body %}
