mongo still not storing entries

--- a/5/marionette/david_bang/templates/index.html
+++ b/5/marionette/david_bang/templates/index.html
@@ -2,15 +2,25 @@
 {% block body %}
 
 
+
+
+
 <script type="text/template" id="story-template">
-  <center><%- line %> <br> </center>
+  <center><%= line %> <br> </center>
 </script>
+
+<script type="text/template" id="stored-template">
+  <center><%= line %> <br> </center>
+</script>
+
 
 <script type="text/template" id="stories-template">
  <center> <div>
   Add New Lines to the Story: <br>  <input type="text" name="lines" id="line"><br><button class="pure-button" id="add">Add</button> </div> </center>
 <br>
 <center>Here is an awesome story <br> </center>
+
+
 <ul></ul>
 
 
@@ -25,8 +35,9 @@
 	</center>
 	</div>
   </div>
-
+<div id="stored"></div>
 <div id="story"></div>
+
 
 <script src="static/app.js"></script>
 {% endblock body %}
