--- a/6/marionette/Maria/templates/base.html
+++ b/6/marionette/Maria/templates/base.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html>
-	<head>
-		<script src="static/lib/jquery.js"></script>
-		<script src="static/lib/lodash.js"></script>
-		<script src="static/lib/backbone.js"></script>
-		<script src="static/lib/backbone.marionette.js"></script>		
-	</head>
-	<body>
-	  {% block body %}
-	  {% endblock %}
-	</body>
-
+  <head>
+    <script src="static/lib/jquery.js"></script>
+    <script src="static/lib/lodash.js"></script>
+    <script src="static/lib/backbone.js"></script>
+    <script src="static/lib/backbone.marionette.js"></script>		
+    <script src="https://bootswatch.com/sandstone/bootstrap.min.css"></script>
+  </head>
+  <body>
+    {% block body %}
+    <h1>base</h1>
+    {% endblock %}
+  </body>
 </html>
