--- a/6/marionette/Maria/templates/base.html
+++ b/6/marionette/Maria/templates/base.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html>
-  <head>
-    <script src="static/lib/jquery.js"></script>
-    <script src="static/lib/lodash.js"></script>
-    <script src="static/lib/backbone.js"></script>
-    <script src="static/lib/backbone.marionette.js"></script>		
-    <script src="https://bootswatch.com/sandstone/bootstrap.min.css"></script>
-  </head>
-  <body>
-    {% block body %}
-    <h1>base</h1>
-    {% endblock %}
-  </body>
+	<head>
+		<script src="static/lib/jquery.js"></script>
+		<script src="static/lib/lodash.js"></script>
+		<script src="static/lib/backbone.js"></script>
+		<script src="static/lib/backbone.marionette.js"></script>
+		<link rel="stylesheet" href="https://bootswatch.com/slate/bootstrap.min.css">
+		
+	</head>
+	<body>
+		{% block body %}
+		<h1> hellobase </h1>
+		{% endblock %}
+	</body>
 </html>
