Tried mongo, failed at mongo

--- a/6/marionette/Maria/templates/index.html
+++ b/6/marionette/Maria/templates/index.html
@@ -1,9 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
 
-<script type = "text/template" id = "static-template">
-  <h3> Add to the list! </h3>
-</script>
 
 
 <script type ="text/template" id = "line">
@@ -23,7 +20,7 @@
       <h1> Shopping List: </h1>
     </div>
     <div class="panel-body">
-      <h3>To-Do:</h3>
+      <h3>To Buy:</h3>
       <div id = "first-region"></div>
     </div>
   </div>
