--- a/6/marionette/barak/templates/index.html
+++ b/6/marionette/barak/templates/index.html
@@ -10,7 +10,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js" type="text/javascript"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js" type="text/javascript"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.marionette/2.4.1/backbone.marionette.js" type="text/javascript"></script>
     <!-- I had to do some stupid stuff in the chessboard.js code - that is, add static/<folder> to the string that fetches the icons. Yeah, flask makes life difficult. -->
     <script src="static/chessboardjs-0.3.0/js/chessboard-0.3.0.js"></script>
     <link rel="stylesheet" href="//chessboardjs.com/css/chessboard.css"></link>
@@ -18,6 +18,9 @@
   <body>
     <h1>hello</h1>
     <div id="board1" style="width: 400px"></div>
+    <script type="text/template" id="temp">
+      <h2>Fen string here</h2>
+    </script>  
     <script src="static/app.js"></script>
   </body>
 </html>
