--- a/5/marionette/ivy_wong/templates/index.html
+++ b/5/marionette/ivy_wong/templates/index.html
@@ -9,7 +9,7 @@
         <button class="pure-button" id="add">Add</button>
     </form>
     </p>
-    <table class="pure-table pure-table-bordered">
+    <table id="storylist" class="pure-table pure-table-bordered">
         <thead>
             <tr><th>Name</th><th>Rating</th><th colspan="3">Controls</th></tr>
         </thead>
