--- a/7/marionette/lise_ho/templates/family.html
+++ b/7/marionette/lise_ho/templates/family.html
@@ -1,27 +1,45 @@
 {% extends "base.html" %}
 {% block body %}
 <script>
-  names = prompt("Please enter your name.");
+  names = prompt("Welcome to the family of Tamagchi! \nPlease enter the name of the first member of your Tamagachi's family (presumably your name).\n");
 </script>
 <script type="text/template" id="static-template">
   <h2> Static Template </h2>
 </script>
 
 <script type="text/template" id="start-template"> 
-  <h2 style="display:inline"> Tamagachi </h2> <img id ="tama_img" width="80px" height="90px" src= <%= img_src %>>
-  <h3> Meet <%= name %>, the Tamagachi</h3>
+  <h2 style="display:inline"></h2> <img id ="tama_img" width="80px" height="90px" src= <%= img_src %>>
+  <h3 style="display:inline"> Meet the Tamagachi family of <span style="font-size:2.0em"><%= name %> </span></h3>
   <input id="newname"></input> <button class = "pure-button pure-button-primary" id="changename">Change Name!</button>
-  </script>
-
-<script type="text/template" id ="composite-template">
-  <h2> <%= name %>'s Stats </h2>
-  <table class = "pure-table pure-table-bordered pure-table-striped">
+  <h3>Add new Family Members below:</h3>
+  <table class = "pure-table pure-table-bordered">
     <thead>
-      <tr>
-	<td>NAME</td><td>HAPPINESS</td><td>HUNGER</td><td>Sprite</td><td>Remove from Family</td>
+       <tr>
+	<td>NAME</td><td>HAPPINESS</td><td>HUNGER</td><td></td>
       </tr>
     </thead>
     <tbody>
+      <form>
+      <td><input type="text" id ="name2"></input></td>
+      <td><input type="text" id ="happiness"></input></td>
+      <td><input type="text" id ="hunger"></input></td>
+      <td> <button class ="pure-button pure-button-primary" id="addnew">Add New Member</button></td>
+      </form>
+    <tbody>
+       
+  </table>
+</script>
+
+<script type="text/template" id ="composite-template">
+  <h2> <%= name %>'s Family </h2>
+   <table class = "pure-table pure-table-bordered">
+     
+    <thead>
+      <tr>
+	<td >NAME</td><td>HAPPINESS</td><td>HUNGER</td><td>Sprite</td><td>Remove from Family</td>
+      </tr>
+    </thead>
+    <tbody style="vertical-align:inherit">
       <!-- filled by attributes-template -->
     </tbody>
 
@@ -29,14 +47,12 @@
 </script>
 
 <script type="text/template" id="attributes-template">
-  <tr>	
-    <td><%- name %></td>  
+  <td valign="top"><%- name %></td>  
     <td><%- happiness%></td> 
     <td><%- hunger  %></td> 
-    <td><img src="<%- img_src %>" width="30" height="40"></img></td> 
+    <td><img src="<%= img_src %>" width="30" height="40"></td> 
     <td><button id="disown">Disown</button></td>
-  </tr> 
-  
+   
 </script>
 
 <div class = "pure-g">
@@ -50,7 +66,8 @@
   <div id ="first-region">
     First region
   </div>
-  <h1> BREAKER <h1>
+  <br>
+  <br>
   <div>
     <table class="pure-table pure-table-bordered" id="second-region">
     </table>
