--- a/7/marionette/lise_ho/templates/family.html
+++ b/7/marionette/lise_ho/templates/family.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
 <script>
-  names = prompt("Welcome to the family of Tamagchi! \nPlease enter the name of the first member of your Tamagachi's family (presumably your name).\n");
+  
 </script>
 <script type="text/template" id="static-template">
   <h2> Static Template </h2>
@@ -11,18 +11,19 @@
   <h2 style="display:inline"></h2> <img id ="tama_img" width="80px" height="90px" src= <%= img_src %>>
   <h3 style="display:inline"> Meet the Tamagachi family of <span style="font-size:2.0em"><%= name %> </span></h3>
   <input id="newname"></input> <button class = "pure-button pure-button-primary" id="changename">Change Name!</button>
-  <h3>Add new Family Members below:</h3>
+</script>
+<script type="text/template" id="add-template">
+    <h3>Add new Family Members below:</h3>
+
   <table class = "pure-table pure-table-bordered">
     <thead>
        <tr>
-	<td>NAME</td><td>HAPPINESS</td><td>HUNGER</td><td></td>
+	<td>NAME</td><td></td>
       </tr>
     </thead>
     <tbody>
       <form>
       <td><input type="text" id ="name2"></input></td>
-      <td><input type="text" id ="happiness"></input></td>
-      <td><input type="text" id ="hunger"></input></td>
       <td> <button class ="pure-button pure-button-primary" id="addnew">Add New Member</button></td>
       </form>
     <tbody>
@@ -67,15 +68,15 @@
     First region
   </div>
   <br>
-  <br>
+  <div id ="third-region">
+    Third region
+  </div>
   <div>
     <table class="pure-table pure-table-bordered" id="second-region">
     </table>
   </div>
   <hr>
-  <div id ="third-region">
-    Third region
-  </div>
+  
   <hr>
   <div id ="fourth-region">
     Fourth region
